--- a/src/components/ui/Navigation.astro
+++ b/src/components/ui/Navigation.astro
@@ -2,23 +2,24 @@
 import type { NavigationItem } from "../../content/site.repository";
 
 export type Props = {
-  lang: string;
   navigationItems: NavigationItem[];
   currentSlug?: string;
 };
 
-const { lang, navigationItems, currentSlug } = Astro.props;
+const { navigationItems, currentSlug } = Astro.props;
 ---
 
-<nav class="d-flex gap-2 flex-wrap">
-  {navigationItems.map((item) => (
-    <a 
-      href={item.path}
-      class={`nav-link ${currentSlug === item.slug ? 'active' : ''}`}
-      title={item.id}
-    >
-      {item.icon && <i class={`${item.icon} me-2`}></i>}
-      <span class="d-none d-md-inline">{item.id}</span>
-    </a>
-  ))}
+<nav class="d-flex gap-2 flex-wrap justify-content-evenly align-items-center">
+  {
+    navigationItems.map((item) => (
+      <a
+        href={item.path}
+        class={`btn btn-sm btn-outline-secondary border-0 ${currentSlug === item.slug ? "active" : ""}`}
+        title={item.name}
+      >
+        {item.icon && <i class={`${item.icon} me-2`} />}
+        <span>{item.name}</span>
+      </a>
+    ))
+  }
 </nav>
