--- a/src/layouts/ManufacturerCategoryPage.astro
+++ b/src/layouts/ManufacturerCategoryPage.astro
@@ -29,6 +29,7 @@ const t = siteRepository.getTranslator(manufacturer.lang);
               <GridItem>
                 <ProductCard
                   product={product}
+                  category={category}
                   badgeQueries={{
                     variant: "light",
                     propKeys: [
