--- a/src/pages/[lang]/[manufacturer]/[category]/[product]/index.astro
+++ b/src/pages/[lang]/[manufacturer]/[category]/[product]/index.astro
@@ -1,26 +1,52 @@
 ---
 import Layout from "../../../../../layouts/Layout.astro";
 import ProductPage from "../../../../../layouts/ProductPage.astro";
-import { manufacturerRepository, productRepository, siteRepository } from "../../../../../content";
+import { Breadcrumb } from "astro-bootstrap";
+import { makeUrl } from "../../../../../libs/url";
+
+import {
+  manufacturerRepository,
+  categoryRepository,
+  productRepository,
+  siteRepository,
+} from "../../../../../content";
 
 export async function getStaticPaths() {
-  const languages = ["en", "pl"];
-  const manufacturers = ["marttiini"];
+  const languages = siteRepository.getAvailableLanguages().map((l) => l.code);
   const paths = [];
 
   for (const lang of languages) {
+    const marttiini = await manufacturerRepository.get("marttiini", lang);
+    const manufacturers = [marttiini];
+
     for (const manufacturer of manufacturers) {
-      const products = await productRepository.findProducts(manufacturer, lang);
-      
-      for (const product of products) {
-        paths.push({
-          params: { 
-            lang, 
-            manufacturer, 
-            category: product.category_slug,
-            product: product.slug
-          }
-        });
+      const categories = await categoryRepository.findManufacturerCategories(
+        manufacturer.id,
+        lang
+      );
+
+      for (const category of categories) {
+        const products = await productRepository.findCategoryProducts(
+          manufacturer.id,
+          category.slug,
+          lang
+        );
+
+        for (const product of products) {
+          paths.push({
+            params: {
+              lang,
+              manufacturer: manufacturer.id,
+              category: category.slug,
+              product: product.slug,
+            },
+            props: {
+              manufacturer,
+              category,
+              product,
+            },
+          });
+        }
       }
     }
   }
@@ -28,19 +54,59 @@ export async function getStaticPaths() {
   return paths;
 }
 
-const { lang, manufacturer, product } = Astro.params;
-const manufacturerData = await manufacturerRepository.get(manufacturer, lang);
-const productData = await productRepository.getProductBySlug(manufacturer, product, lang);
+const { lang } = Astro.params;
+const { manufacturer, category, product } = Astro.props;
+
 const socials = siteRepository.getSocialAccounts();
 const owner = siteRepository.getSiteOwner();
 const languages = siteRepository.getAvailableLanguages();
 const currentLanguage = siteRepository.getLanguage(lang);
 const navigationItems = siteRepository.getNavigationItems(lang);
+const t = siteRepository.getTranslator(lang);
+
+// Build navigation items for all languages
+const allNavigationItems: Record<string, any[]> = {};
+for (const language of languages) {
+  allNavigationItems[language.code] = siteRepository.getNavigationItems(language.code);
+}
 ---
 
-<Layout title={productData.name_short} {lang} {socials} {owner} {languages} {currentLanguage} {navigationItems}>
-  <ProductPage 
-    manufacturer={manufacturerData} 
-    product={productData} 
+<Layout
+  title={product.name_short}
+  {lang}
+  {socials}
+  {owner}
+  {languages}
+  {currentLanguage}
+  {navigationItems}
+  {allNavigationItems}
+>
+  <Breadcrumb>
+    <Breadcrumb.Item>
+      <a
+        href={makeUrl(Astro, {
+          targetLocale: lang,
+          path: makeUrl(Astro, { targetLocale: lang, path: "/" }),
+        })}
+      >
+        {t("nav.home")}
+      </a>
+    </Breadcrumb.Item>
+    <Breadcrumb.Item>
+      <a href={makeUrl(Astro, { targetLocale: lang, path: manufacturer.id })}>
+        {manufacturer.name}
+      </a>
+    </Breadcrumb.Item>
+    <Breadcrumb.Item>
+      <a href={makeUrl(Astro, { targetLocale: lang, path: `${manufacturer.id}/${category.slug}` })}>
+        {category.name}
+      </a>
+    </Breadcrumb.Item>
+  </Breadcrumb>
+
+  <ProductPage
+    manufacturer={manufacturer}
+    category={category}
+    product={product}
   />
 </Layout>
