--- a/src/components/ui/Header.astro
+++ b/src/components/ui/Header.astro
@@ -1,10 +1,18 @@
 ---
+import { Navbar } from "astro-bootstrap";
+import type { NavbarItemType } from "astro-bootstrap";
+import { CldImage } from "astro-cloudinary";
+import { makeUrl } from "../../libs/url";
 import Logo from "./Logo.astro";
 import LanguageSelector from "./LanguageSelector.astro";
 import Socials from "./Socials.astro";
 import Navigation from "./Navigation.astro";
 
-import type { SocialAccount, AvailableLanguage, NavigationItem } from "../../content/site.repository";
+import type {
+  SocialAccount,
+  AvailableLanguage,
+  NavigationItem,
+} from "../../content/site.repository";
 
 export type Props = {
   lang: string;
@@ -12,27 +20,67 @@ export type Props = {
   languages: AvailableLanguage[];
   currentLanguage: AvailableLanguage;
   navigationItems: NavigationItem[];
-  currentSlug?: string;
+  currentId?: string;
+  allNavigationItems: Record<string, NavigationItem[]>;
 };
 
-const { lang, socials, languages, currentLanguage, navigationItems, currentSlug } = Astro.props;
+const {
+  lang,
+  socials,
+  languages,
+  currentLanguage,
+  navigationItems,
+  currentId,
+  allNavigationItems,
+} = Astro.props;
+
+const id = "main-navbar";
 ---
 
 <header class="ui-header container-fluid px-0">
   <div class="socials-container bg-dark">
     <Socials socials={socials} />
   </div>
-  <div class="container d-flex justify-content-between align-items-center py-2">
-    <Logo {lang} />
-    <div class="d-flex align-items-center gap-3">
-      <LanguageSelector {languages} {currentLanguage} />
-    </div>
-  </div>
-  <div class="container-fluid bg-light border-bottom pb-2">
+
+  <Navbar class="navbar-expand-sm bg-light" data-bs-theme="light">
     <div class="container">
-      <Navigation {navigationItems} {currentSlug} />
+      <a
+        class="navbar-brand"
+        href={makeUrl(Astro, { targetLocale: lang, path: "/" })}
+      >
+        <CldImage
+          class={"h-100 w-100"}
+          crop="fill"
+          gravity="auto"
+          format="auto"
+          quality="auto"
+          width={70}
+          src={`eley.com.pl/grey-hunter-logo-02.svg`}
+          alt="Grey Hunter Logo"
+          sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
+        />
+      </a>
+      <Navbar.Toggler controls={id} />
+      <Navbar.Collapse {id}>
+        <div class="d-flex align-items-center justify-content-between gap-3 w-100" >
+          <nav class="nav d-flex gap-2 flex-wrap justify-content-evenly align-items-center mx-3">
+            {
+              navigationItems.map((item) => (
+                <a
+                  href={item.path}
+                  class={`btn btn-sm btn-outline-secondary border-0 ${currentId === item.id ? "active" : ""}`}
+                  title={item.name}
+                >
+                  <span>{item.name}</span>
+                </a>
+              ))
+            }
+          </nav>
+          <LanguageSelector {languages} {currentLanguage} {currentId} {allNavigationItems} />
+        </div>
+      </Navbar.Collapse>
     </div>
-  </div>
+  </Navbar>
 </header>
 <div class="container-fluid bg-secondary text-center py-1 shadow-sm">
   <span class="text-white fw-bold">GREY HUNTER</span>
