--- a/src/components/ui/LanguageSelector.astro
+++ b/src/components/ui/LanguageSelector.astro
@@ -1,13 +1,32 @@
 ---
 import { makeUrl } from "../../libs/url";
-import type { AvailableLanguage } from "../../content/site.repository";
+import type { AvailableLanguage, NavigationItem } from "../../content/site.repository";
 
 interface Props {
   languages: AvailableLanguage[];
   currentLanguage: AvailableLanguage;
+  currentId?: string;
+  allNavigationItems: Record<string, NavigationItem[]>;
 }
 
-const { languages, currentLanguage } = Astro.props;
+const { languages, currentLanguage, currentId, allNavigationItems } = Astro.props;
+
+// Function to get the correct URL for a target language
+function getLanguageUrl(targetLang: string): string {
+  // If we have a currentId, find the corresponding slug in the target language
+  if (currentId) {
+    const targetNavItems = allNavigationItems[targetLang];
+    const targetItem = targetNavItems?.find(item => item.id === currentId);
+    
+    if (targetItem) {
+      // Use the slug for the target language
+      return `/${targetLang}/${targetItem.slug}/`;
+    }
+  }
+  
+  // Fallback to the default behavior (just switch the locale)
+  return makeUrl(Astro, { targetLocale: targetLang });
+}
 ---
 
 <div class="ui-language-selector dropdown d-inline-block ms-3">
@@ -23,7 +42,7 @@ const { languages, currentLanguage } = Astro.props;
     {
       languages.map(({ code, label, flag }) => (
         <li>
-          <a class="dropdown-item" href={makeUrl(Astro, { targetLocale: code })} >
+          <a class="dropdown-item" href={getLanguageUrl(code)} >
             {flag}
             {label}
           </a>
